Use some java 21 features